--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ baseurl: /
 
 # Google tracking id
 
-google-tracking-id: ""
+google-tracking-id: "UA-151744066-1"
 
 # Forces https everywhere in your website, except when you serve it locally
 # If you are not hosted on Github Pages, and your host doesn't support https
@@ -128,7 +128,7 @@ pinterest-share: True
 pocket-share: True
 vkontakte-share: True
 
-# disqus-shortname: "personal-jekyll-theme"
+disqus-shortname: "Jingyuan Zhu"
 
 syntax-highlight: True
 
@@ -166,7 +166,7 @@ events:
 # This works best when your author blurb image has a transparent background, or matches your site background color.
 
 # if the author_blurb is not set, then this feature is skipped
-author_blurb: ""
+# author_blurb: ""
 author_blurb_image: "/img/author.jpg"
 
 ##################
@@ -212,6 +212,7 @@ pages_list:
   Education: 'education'
   Project: 'project'
   Publication: 'publication'
+  # Blog: 'latest-post'
   Contact: 'contact'
 
 # Exclusion list from the generated _site
@@ -227,7 +228,7 @@ paginate_path: "blog/page:num/"
 sass:
   style: compressed
 
-gems:
+plugins:
   - jekyll-paginate
   - jemoji
 
