--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@
 # NB! Set your site's url, otherwise stuff will break :)
 
 url: "https://jingyzhu.github.io"
+# url: "http://www-personal.umich.edu/~jingyz"
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (https://yourusername.github.io/repository-name)
@@ -13,6 +14,7 @@ url: "https://jingyzhu.github.io"
 # NB! Without this *nothing* will work, because it's used in every path :)
 
 baseurl: /
+# baseurl: /~jingyz
 
 # Google tracking id
 
