--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@
 
 url: "https://jingyzhu.github.io"
 # url: "http://www-personal.umich.edu/~jingyz"
+# url: "http://web.eecs.umich.edu/~jingyz"
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (https://yourusername.github.io/repository-name)
